# ExtendedColorSelector

./: .gitignore  CHANGELOG  CMakeLists.txt  Cargo.toml  README.md  create_artifacts.ps1  extended_color_selector.desktop  install_win.ps1  launch.ps1
ExtendedColorSelector/: __init__.py
axes_limits_compute/: Cargo.toml
axes_limits_compute/src/: main.rs
extended_color_selector/: __init__.py  axes_limits.bytes  channel_lockers.py  color_model_switcher.py  color_wheel.frag  color_wheel.py  config.py  extended_color_selector.py  fullscreen.vert  gamut_clipping.py  internal_state.py  locked_channel_bar.frag  manual.html  models.py  portable_color_selector.py  primary_channel_bar.frag  secondary_channels_plane.frag  setting.py
extended_color_selector/shader_components/color_models/: hsl.glsl  hsv.glsl  lab.glsl  okhsl.glsl  okhsv.glsl  oklab.glsl  oklch.glsl  rgb.glsl  xyz.glsl
extended_color_selector/shader_components/color_spaces/: hsl.glsl  hsv.glsl  oklab.glsl  rgb.glsl
extended_color_selector/shader_components/shapes/: circle.glsl  square.glsl  triangle.glsl
extended_color_selector/shader_components/wheels/: square.glsl
python/: __init__.py  actions.action  axes_limits.bytes  extension.py
src/: CMakeLists.txt  ColorState.cpp  ColorState.h  EXChannelPlane.cpp  EXChannelPlane.h  EXChannelSlider.cpp  EXChannelSlider.h  EXColorModel.cpp  EXColorModel.h  EXColorModelSwitchers.cpp  EXColorModelSwitchers.h  EXColorPatchPopup.cpp  EXColorPatchPopup.h  EXColorSelectorDock.cpp  EXColorSelectorDock.h  EXColorSelectorPlugin.cpp  EXColorSelectorPlugin.h  EXColorState.cpp  EXColorState.h  EXEditable.cpp  EXEditable.h  EXGamutClipping.cpp  EXGamutClipping.h  EXKoColorConverter.cpp  EXKoColorConverter.h  EXPortableColorSelector.cpp  EXPortableColorSelector.h  EXSettings.cpp  EXSettings.h  EXSettingsDialog.cpp  EXSettingsDialog.h  EXSettingsState.cpp  EXSettingsState.h  EXShape.cpp  EXShape.h  EXUtils.cpp  EXUtils.h  ExtendedChannelPlane.cpp  ExtendedChannelPlane.h  ExtendedChannelSlider.cpp  (+27 more)
